tests/cases/compiler-development/artifact/errors/diagnostic-imported-parse-source-id.diagnostic
diagnostic error code=P0001 family=parser message="expected ; after return" sources=1 labels=1 notes=1 helps=1
  Source source_id=1 kind=file path="tests/cases/modules/errors/imported_parse_error.ari" display="tests/cases/modules/errors/imported_parse_error.ari" bytes=38
  Label index=0 role=primary source_id=1 source="tests/cases/modules/errors/imported_parse_error.ari" line=3 column=1 end_line=3 end_column=2 byte_start=36 byte_end=37 message=""
  Snippet label=0 text="  --> tests/cases/modules/errors/imported_parse_error.ari:3:1\n   |\n 3 | }\n   | ^"
  Note index=0 location=none message="this statement or declaration must be terminated before the next token is parsed"
  Help index=0 location=none message="insert ; before '}'"
